<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewRoomActivity">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Room Name -->
            <EditText
                android:id="@+id/room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Room Name"
                android:inputType="text" />

            <!-- Description -->
            <EditText
                android:id="@+id/form_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:inputType="textMultiLine" />

            <!-- שדה לקליטת אפשרות -->
            <EditText
                android:id="@+id/poll_option_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter poll option"
                android:inputType="text"
                android:visibility="visible"/>
            <!-- כפתור להוספת אפשרות -->
            <Button
                android:id="@+id/add_poll_option_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Option"
                android:visibility="visible"/>
            <!-- רשימה של האפשרויות שהוספו -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/poll_options_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>

            <!-- Radio Group for Bet Type -->
            <RadioGroup
                android:id="@+id/bet_type_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/event_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Even Bet" />

                <RadioButton
                    android:id="@+id/ratio_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ratio Bet" />
            </RadioGroup>

            <!-- Bet Number -->
            <EditText
                android:id="@+id/bet_amount_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bet Number"
                android:inputType="number"
                android:visibility="gone" />

            <!-- Expiration Date -->
            <EditText
                android:id="@+id/form_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Expiration Date"
                android:focusable="false"
                android:inputType="date" />

            <!-- Checkboxes for Public Room and Event -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/form_checkbox_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Public Room" />

                <CheckBox
                    android:id="@+id/form_checkbox_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Event"
                    android:visibility="gone" />
            </LinearLayout>

            <!-- Maximum Participants -->
            <EditText
                android:id="@+id/max_participants_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Max Participants"
                android:inputType="number" />

            <!-- Room Code -->
            <EditText
                android:id="@+id/form_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Room Code"
                android:inputType="text" />
            <!-- Event Subject -->
            <EditText
                android:id="@+id/event_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Subject"
                android:inputType="text"
                android:visibility="gone" />

            <!-- Upload Button -->
            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload Image" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Room" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>