...
        android:layout_height="wrap_content"
        android:hint="@string/what_is_the_bet"
        android:inputType="text" />

    <!-- Number Input -->
    <EditText
        android:id="@+id/form_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_much_we_bettin"
        android:inputType="number" />

    <!-- Description Input -->
...
