...
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/room_placeholder_image"
                            android:contentDescription="Profile Image"/>

                        <ImageView
                            android:id="@+id/edit_image_button"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom|end"
                            android:src="@drawable/ic_edit"
                            android:contentDescription="Edit Profile Image"
                            android:background="@drawable/circle_background"/>
...
                            android:text="@string/about"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/profile_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/black"
                            android:hint="@string/bio"
                            android:fontFamily="@font/poppinsregular"
...
                            android:text="@string/username"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/profile_username_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:hint="Enter username"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
...
                            android:text="@string/gender"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/profile_gender_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:hint="Enter gender"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
...
                            android:text="@string/age"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/profile_age_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:hint="Enter age"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
...
                            android:text="@string/date_of_birth"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/profile_dob_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:hint="Enter DOB"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
...
                            android:text="@string/mobile"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/profile_mobile_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#6E6C6C"
                            android:hint="Enter mobile"
                            android:fontFamily="@font/poppinsmedium"
                            android:textSize="15sp"
...
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Edit Data Button -->
            <Button
                android:id="@+id/edit_data_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit Profile Data"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:backgroundTint="?attr/colorPrimary"
...
